@@ -15,8 +15,8 @@
     </parent>
 
     <properties>
-        <jruby-complete.version>9.0.5.0</jruby-complete.version>
-        <jython-standalone.version>2.7.2</jython-standalone.version>
+        <jruby-complete.version>9.3.9.0</jruby-complete.version>
+        <jython-standalone.version>2.7.3</jython-standalone.version>
         <apache-ivy.version>2.5.1</apache-ivy.version>
     </properties>
 
@@ -78,6 +78,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
